# axis-deal-engine

./: .editorconfig  .gitignore  Procfile  README.md  main.py  pyproject.toml  railway.json  requirements.txt  run.py
core/: __init__.py  deal_analyzer.py  land_registry.py  models.py  scoring.py
core/architecture/: DATA_SOURCE_EXPANSION_FRAMEWORK.md  DEAL_ENGINE_v1.1_SPECIFICATION.md
core/comp_engine/: __init__.py  filters.py  models.py  valuation.py
core/ingestion/: __init__.py  adapter.py  registry.py  schema.py
core/intake/: __init__.py  logbook.py  schema.py  validation.py
core/submission/: __init__.py  auto_publish.py  export.py  friction_log.py  invite.py  logbook.py  repository.py  schema.py  storage.py  validation.py  verification.py
data/: .gitkeep
desktop/: main.js  package.json
docs/: AGENT_SUBMISSION_PORTAL.md
docs/agent-pilot/: DEPLOYMENT.md  README.md  agent-pilot-pack.css  agent-pilot-pack.html  generate-pdf.py
reporting/: __init__.py  __main__.py  agent_guide_generator.py  buyer_pdf_generator.py  buyer_schemas.py  cli.py  pdf_generator.py  sample_mandate.json  schemas.py
reports/archive/: README.md
reports/guides/: agent_submission_guide.html
scraper/: __init__.py  auction_house_london.py  base.py  mock.py
tests/: test_auction_house_london.py  test_auto_publish.py  test_buyer_pdf.py  test_comp_engine.py  test_deal_analyzer_integration.py  test_intake.py  test_invite_tokens.py  test_no_dummy_data.py  test_trust_primitives.py  test_verified_property_export.py
tests/fixtures/: auction_house_london_sample.html
utils/: __init__.py  config.py  formatting.py
web/: __init__.py  admin_auth.py  admin_routes.py  app.py  submission_routes.py
web/static/: styles.css
web/templates/: admin_friction_log.html  admin_login.html  admin_submission_detail.html  admin_submissions.html  base.html  index.html  results.html  submission_admin.html  submission_confirmation.html  (+2 more)
