[project]
name = "axis-deal-engine"
version = "0.1.0"
description = "Internal deal sourcing engine for property opportunities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", ".vscode", "node_modules", "reports"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.vscode
  | __pycache__
  | reports
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "__pycache__", ".vscode", "node_modules", "reports"]
known_first_party = ["core", "scraper", "reporting", "deal_engine", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]
